# closing-bet-recommender

./: .gitignore  start.ps1
backend/: .env.example  launcher.py  pyproject.toml
backend/app/: config.py  desktop.py  main.py  notify.py
backend/app/api/: backtest.py  calendar.py  disclosures.py  health.py  highs.py  jobs.py  market.py  news.py  performance.py  recommendations.py  reminder.py  run.py  schemas.py  stock.py  universe.py
backend/app/backtest/: __init__.py  engine.py  ic.py  loaders.py  reconstruct.py
backend/app/data/: broker_adapter.py  dart_client.py  kis_client.py  mapping.py  pykrx_client.py
backend/app/engine/: __init__.py  grade.py  orchestrator.py  pipeline.py  pricing.py  scoring.py
backend/app/scheduler/: calendar.py  daily_run.py  live_binding.py  premarket.py  scoring_job.py  service.py
backend/app/store/: corp_codes.py  db.py  final_cache.py  models.py  orchestrator_store.py  snapshots.py
backend/scripts/: README_scheduler.md  build_exe.ps1  install_autostart.ps1  register_tasks.ps1  telegram_setup.py  universe_expansion_backtest.py
backend/tests/: conftest.py  test_broker_adapter.py  test_config.py  test_dart_client.py  test_desktop.py  test_integration_wiring.py  test_kis_client.py  test_launcher.py  test_live_adapter.py  test_mapping.py  test_notify.py  test_pykrx_client.py  test_snapshots.py  test_store_models.py
backend/tests/acceptance/: test_mvp_gates.py
backend/tests/api/: conftest.py  test_app_lifespan.py  test_backtest.py  test_calendar.py  test_disclosures.py  test_health.py  test_highs.py  test_jobs.py  test_run.py  (+7 more)
(+147 files in other folders)
