[project]
name = "closing-bet-recommender-backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["fastapi", "uvicorn", "pykrx", "pandas", "requests", "sqlalchemy>=2.0", "pydantic>=2", "numpy", "plyer"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
